// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar > renders the component 1`] = `
<DocumentFragment>
  <div
    class="d-none d-lg-flex flex-column border-end"
  >
    <ul
      class="flex-grow-1 nav nav-pills flex-column mb-auto text-center"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link py-3 border-bottom rounded-0 active"
          href="/"
        >
          <svg
            class="svg-icon"
            fill="currentColor"
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h510.76q27.62 0 46.12 18.5Q800-763 800-735.38v510.76q0 27.62-18.5 46.12Q763-160 735.38-160H224.62ZM460-383.85H200v159.23q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92H460v-183.85Zm40 0V-200h235.38q10.77 0 17.7-6.92 6.92-6.93 6.92-17.7v-159.23H500Zm-40-40v-185.38H200v185.38h260Zm40 0h260v-185.38H500v185.38ZM200-649.23h560v-86.15q0-10.77-6.92-17.7-6.93-6.92-17.7-6.92H224.62q-10.77 0-17.7 6.92-6.92 6.93-6.92 17.7v86.15Z"
              stroke="currentColor"
              stroke-width="12"
            />
            <title>
              Pagination
            </title>
          </svg>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link py-3 border-bottom rounded-0"
          href="/buttons"
        >
          <svg
            class="svg-icon"
            fill="currentColor"
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M480-320q66.85 0 113.42-46.58Q640-413.15 640-480t-46.58-113.42Q546.85-640 480-640t-113.42 46.58Q320-546.85 320-480t46.58 113.42Q413.15-320 480-320Zm.13 200q-74.67 0-140.41-28.34-65.73-28.34-114.36-76.92-48.63-48.58-76.99-114.26Q120-405.19 120-479.87q0-74.67 28.34-140.41 28.34-65.73 76.92-114.36 48.58-48.63 114.26-76.99Q405.19-840 479.87-840q74.67 0 140.41 28.34 65.73 28.34 114.36 76.92 48.63 48.58 76.99 114.26Q840-554.81 840-480.13q0 74.67-28.34 140.41-28.34 65.73-76.92 114.36-48.58 48.63-114.26 76.99Q554.81-120 480.13-120Zm-.13-40q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
              stroke="currentColor"
              stroke-width="12"
            />
            <title>
              Boutons
            </title>
          </svg>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link py-3 border-bottom rounded-0"
          href="/i18n"
        >
          <svg
            class="svg-icon"
            fill="currentColor"
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m476-120 174.31-440h40.92l174.31 440h-43.23l-47.62-122H566.85l-47.62 122H476ZM160.77-235.38l-28.31-28.31 195.85-196.62q-34.23-35-68.12-86.15Q226.31-597.62 210-640h43.23q14.62 33.62 44.23 77.23 29.62 43.62 59.16 74.15 52.23-53 92.73-116.34 40.5-63.35 53.88-115.04H95.38v-40H340v-49.23h40V-760h244.62v40h-79.85q-17.92 62.77-61.08 133.77-43.15 71-98.77 126.38l101.39 104.16-15.39 41.23-114.3-117.31-195.85 196.39Zm419.54-42.77h180.92l-90.46-232.47-90.46 232.47Z"
              stroke="currentColor"
              stroke-width="12"
            />
            <title>
              Internationalisation
            </title>
          </svg>
        </a>
      </li>
    </ul>
    <ul
      class="nav nav-pills flex-column mb-auto text-center"
    >
      <li
        class="nav-item"
      >
        <button
          class="nav-link py-3 rounded-0"
          type="button"
        >
          <svg
            class="svg-icon"
            fill="currentColor"
            height="24"
            viewBox="0 -960 960 960"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M531.69-480 361.85-649.85q-5.62-5.61-6-13.77-.39-8.15 6-14.53 6.38-6.39 14.15-6.39 7.77 0 14.15 6.39l175.54 175.53q5.23 5.24 7.35 10.7 2.11 5.46 2.11 11.92t-2.11 11.92q-2.12 5.46-7.35 10.7L390.15-281.85q-5.61 5.62-13.77 6-8.15.39-14.53-6-6.39-6.38-6.39-14.15 0-7.77 6.39-14.15L531.69-480Z"
              stroke="currentColor"
              stroke-width="12"
            />
          </svg>
          <div
            class="d-none"
          >
            Développer
          </div>
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Sidebar > renders the component 2`] = `
<DocumentFragment>
  <div
    class="d-none d-lg-flex flex-column border-end"
  >
    <ul
      class="flex-grow-1 nav nav-pills flex-column mb-auto p-2"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active"
          href="/"
        >
          <svg
            class="svg-icon me-2"
            fill="currentColor"
            height="20"
            viewBox="0 -960 960 960"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224.62-160q-27.62 0-46.12-18.5Q160-197 160-224.62v-510.76q0-27.62 18.5-46.12Q197-800 224.62-800h510.76q27.62 0 46.12 18.5Q800-763 800-735.38v510.76q0 27.62-18.5 46.12Q763-160 735.38-160H224.62ZM460-383.85H200v159.23q0 10.77 6.92 17.7 6.93 6.92 17.7 6.92H460v-183.85Zm40 0V-200h235.38q10.77 0 17.7-6.92 6.92-6.93 6.92-17.7v-159.23H500Zm-40-40v-185.38H200v185.38h260Zm40 0h260v-185.38H500v185.38ZM200-649.23h560v-86.15q0-10.77-6.92-17.7-6.93-6.92-17.7-6.92H224.62q-10.77 0-17.7 6.92-6.92 6.93-6.92 17.7v86.15Z"
              stroke="currentColor"
              stroke-width="12"
            />
            <title>
              Pagination
            </title>
          </svg>
          Pagination
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="/buttons"
        >
          <svg
            class="svg-icon me-2"
            fill="currentColor"
            height="20"
            viewBox="0 -960 960 960"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M480-320q66.85 0 113.42-46.58Q640-413.15 640-480t-46.58-113.42Q546.85-640 480-640t-113.42 46.58Q320-546.85 320-480t46.58 113.42Q413.15-320 480-320Zm.13 200q-74.67 0-140.41-28.34-65.73-28.34-114.36-76.92-48.63-48.58-76.99-114.26Q120-405.19 120-479.87q0-74.67 28.34-140.41 28.34-65.73 76.92-114.36 48.58-48.63 114.26-76.99Q405.19-840 479.87-840q74.67 0 140.41 28.34 65.73 28.34 114.36 76.92 48.63 48.58 76.99 114.26Q840-554.81 840-480.13q0 74.67-28.34 140.41-28.34 65.73-76.92 114.36-48.58 48.63-114.26 76.99Q554.81-120 480.13-120Zm-.13-40q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
              stroke="currentColor"
              stroke-width="12"
            />
            <title>
              Boutons
            </title>
          </svg>
          Boutons
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
          href="/i18n"
        >
          <svg
            class="svg-icon me-2"
            fill="currentColor"
            height="20"
            viewBox="0 -960 960 960"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m476-120 174.31-440h40.92l174.31 440h-43.23l-47.62-122H566.85l-47.62 122H476ZM160.77-235.38l-28.31-28.31 195.85-196.62q-34.23-35-68.12-86.15Q226.31-597.62 210-640h43.23q14.62 33.62 44.23 77.23 29.62 43.62 59.16 74.15 52.23-53 92.73-116.34 40.5-63.35 53.88-115.04H95.38v-40H340v-49.23h40V-760h244.62v40h-79.85q-17.92 62.77-61.08 133.77-43.15 71-98.77 126.38l101.39 104.16-15.39 41.23-114.3-117.31-195.85 196.39Zm419.54-42.77h180.92l-90.46-232.47-90.46 232.47Z"
              stroke="currentColor"
              stroke-width="12"
            />
            <title>
              Internationalisation
            </title>
          </svg>
          Internationalisation
        </a>
      </li>
    </ul>
    <ul
      class="nav nav-pills flex-column mb-auto p-3"
    >
      <li
        class="nav-item"
      >
        <button
          class="nav-link"
          type="button"
        >
          <svg
            class="svg-icon me-2"
            fill="currentColor"
            height="20"
            viewBox="0 -960 960 960"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m404.31-480 169.84 169.85q5.62 5.61 6 13.77.39 8.15-6 14.53-6.38 6.39-14.15 6.39-7.77 0-14.15-6.39L370.31-457.38q-5.23-5.24-7.35-10.7-2.11-5.46-2.11-11.92t2.11-11.92q2.12-5.46 7.35-10.7l175.54-175.53q5.61-5.62 13.77-6 8.15-.39 14.53 6 6.39 6.38 6.39 14.15 0 7.77-6.39 14.15L404.31-480Z"
              stroke="currentColor"
              stroke-width="12"
            />
          </svg>
          Réduire
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
